
    o Replaced vif.lm() with vif.default() to cover wider variety of models (after question by Laura Rigg about gls models).

    o Diagonal panels in scatterplotMatrix() (except for histograms) show groups separately when plotted by groups (suggestion by Erich Neuwirth).

Changes to Version 2.0-20

    o Added new id.method="r" to showLabels for labeling plots of residuals; default id.method changed in residualPlots.

    o Fixed handling of labels argument to outlierTest() (bug report by Stephane Laurent).

    o Accommodate numeric variables consisting entirely of NAs in recode() (suggestion of Karl Ove Hufthammer).

    o Prevent dataEllipse() from opening a graphics device when draw=FALSE (fixing bug reported by Rafael Laboissiere).

    o The functions makeHypothesis() and printHypothesis(), intended for internal use, are exported so that they can be used in other packages (request of Arne Henningsen).

    o Small fixes.

Changes to Version 2.0-19

    o allow a grouping variable for color, symbol and fits in residualPlots

    o fixed axis labelling probelm in influenceIndexPlot

    o fixed scoping problems in Boot, bootCase, and ncvTest

    o added an argument to deltaMethod for passing arguments to get scoping right when calling linearHypothesis in another function; other deltaMethod bugs fixed

    o slight modification to documentation of Boot

    o summary() method for "Anova.mlm" objects now returns an object, printed by a corresponding print() method (adapting code contributed by Gabriel Baud-Bovy).

    o added .merMod methods to Anova(), deltaMethod(), linearHypothesis(), matchCoefs(), and unexported utilities df.residual() and has.intercept(); insured compatibility with nlme and CRAN and developments versions of lme4.

    o added use argument to scatterplotMatrix() (suggestion of Antoine Lizee).

    o export linearHypothesis.default() for use in other packages (suggestion of Achim Zeileis).

    o small changes and fixes.
